--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -77,6 +77,13 @@
 .app__navbar-smallscreen-links li:hover {
   color: var(--color-white);
 }
+
+@media screen and (max-width: 2000px) {
+  .app__navbar-logo img {
+    width: 100px;
+  }
+}
+
 @media screen and (max-width: 1150px) {
   .app__navbar-links {
     display: none;
@@ -84,5 +91,15 @@
 
   .app__navbar-smallscreen {
     display: flex;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app__navbar {
+    padding: 1rem;
+  }
+
+  .app__navbar-logo img {
+    width: 70px;
   }
 }
