--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -49,3 +49,42 @@
   margin: 2rem 0;
   width: 100%;
 }
+
+@media screen and (max-width: 2000px) {
+  .app__speacialMenu-menu_img {
+    width: auto;
+  }
+
+  .app__speacialMenu-menu_img img {
+    height: 500px;
+    display: flex;
+  }
+
+  .app__speacialMenu-menu_img img {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .app__speacialMenu-menu {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .app__speacialMenu-menu_img {
+    margin: 3rem 0;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app__speacialMenu-menu_img {
+    width: 100%;
+  }
+
+  .app__speacialMenu-menu_heading {
+    font-size: 35px;
+    line-height: 48.5px;
+  }
+}
