--- a/src/container/Collection/Collection.css
+++ b/src/container/Collection/Collection.css
@@ -1,25 +1,23 @@
 .app__collection {
-  border: 2px solid red;
-  position: relative;
+  /* border: 2px solid red; */
+  width: 100%;
+  /* position: relative; */
   background-color: var(--color-black);
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .app__collection-overlay {
-  position: absolute;
-  inset: 1em;
+  /* position: absolute; */
+  /* inset: 1em; */
   display: flex;
-  justify-content: center;
-  border: 2px solid greenyellow;
+
+  /* border: 2px solid greenyellow; */
 }
 
 .app__collection-content {
   display: flex;
   flex-direction: column;
-  border: 2px solid yellow;
-  align-items: center;
-}
-
-.app__collection-images {
-  flex-wrap: wrap;
 }
