--- a/src/components/CollectionItem/CollectionItem.css
+++ b/src/components/CollectionItem/CollectionItem.css
@@ -43,7 +43,7 @@
   border: 1px solid lightgray;
   border-radius: 30px;
   display: flex;
-  width: 30%;
+  /* width: 30%; */
 }
 
 .app__collectionItem-addToCart-plusBtn,
